[package]
name = "rzp-rs"
version = "0.0.1"
edition = "2018"
authors = ["Ayan Banerjee"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.57"